## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gtk_debtools_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@

gtk_debtools_data_DATA = \
	window_debviewer.glade

EXTRA_DIST = $(gtk_debtools_data_DATA)
