## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gtk_debtools_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

gtk_debtools_pixmaps_DATA = \
	gtk-debtools-icon.png\
	file-roller_20x20.xpm\
	file-roller_32x32.xpm\
	gnome-debviewer-icon.png\
	gnome-mime-application-x-deb.png\
	install_20x20.xpm\
	install_32x32.xpm

EXTRA_DIST = $(gtk_debtools_pixmaps_DATA)
